fix word wrap

--- a/src/components/Susspense/Fallback.css
+++ b/src/components/Susspense/Fallback.css
@@ -5,7 +5,6 @@
 *:after {
   margin: 0;
   padding: 0;
-  word-break: break-all;
   box-sizing: border-box;
 }
 
